# rc505-editor

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.txt  rc-505-editor.jucer  rc505-editor.jucer
.github/workflows/: ci.yml
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Icon.icns  Info-App.plist  Info.plist
Builds/MacOSX/RC-505 Editor.xcodeproj/: project.pbxproj
Builds/MacOSX/RC-505.xcodeproj/: project.pbxproj
Builds/MacOSX/rc505-editor.xcodeproj/: project.pbxproj
Builds/MacOSX/rc505-editor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/MacOSX/rc505-editor.xcodeproj/project.xcworkspace/xcshareddata/: rc505-editor.xccheckout
Builds/VisualStudio2015/: RC-505 Editor.sln  RC-505 Editor.vcxproj  RC-505 Editor.vcxproj.filters  RC-505.sln  RC-505.vcxproj  RC-505.vcxproj.filters  resources.rc
Builds/VisualStudio2017/: RC-505 Editor.sln  RC-505 Editor_App.vcxproj  RC-505 Editor_App.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.h
JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
JuceLibraryCode/modules/juce_audio_utils/: juce_audio_utils.h
JuceLibraryCode/modules/juce_core/: juce_core.h
JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
JuceLibraryCode/modules/juce_events/: juce_events.h
JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
JuceLibraryCode/modules/juce_opengl/: juce_opengl.h
JuceLibraryCode/modules/juce_video/: juce_video.h
Resources/: MEMORY.RC0  SYSTEM.RC0  SYSTEM.RC0.v2
Source/: AudioEngine.cpp  AudioEngine.h  CommandIDs.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LibraryTasks.h  LibraryView.cpp  LibraryView.h  LooperEngine.cpp  LooperEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  MemoryView.cpp  MemoryView.h  MountedVolumeListChangeDetector.h  PatchTreeView.cpp  PatchTreeView.h  PatchView.cpp  PatchView.h  PlayButton.h  PropertySetDialog.cpp  PropertySetDialog.h  PropertyTreeView.cpp  PropertyTreeView.h  PropertyView.cpp  PropertyView.h  RC505.cpp  RC505.h  Resampler.cpp  Resampler.h  SystemView.cpp  SystemView.h  Theme.h  TooltipPanel.cpp  TooltipPanel.h  TrackLabel.cpp  TrackLabel.h  (+6 more)
Source/libsamplerate/: common.h  float_cast.h  samplerate.c  samplerate.h  src_linear.c  src_sinc.c  src_zoh.c
Source/rubberband/: Config.h  StretcherImpl.h
Source/rubberband/dsp/: Resampler.cpp
Source/rubberband/system/: Thread.h  sysutils.h
resources/: icon.psd
resources_/: MEMORY.RC0
src/: AudioEngine.cpp  AudioEngine.h  CommandIDs.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LibraryTasks.h  LibraryView.cpp  LibraryView.h  LooperEngine.cpp  LooperEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  MemoryView.cpp  MemoryView.h  MountedVolumeListChangeDetector.h  PatchTreeView.cpp  PatchTreeView.h  PatchView.cpp  PatchView.h  PlayButton.h  PropertySetDialog.cpp  PropertySetDialog.h  PropertyTreeView.cpp  PropertyTreeView.h  PropertyView.cpp  PropertyView.h  RC505.cpp  RC505.h  SystemView.cpp  SystemView.h  TooltipPanel.cpp  TooltipPanel.h  TrackLabel.cpp  TrackLabel.h  TrackView.cpp  TrackView.h  Utils.cpp  Utils.h  WaveformView.cpp  (+1 more)
